--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,3 @@
 URL = https://www.facebook.com/
 ExcelConfigFileName = ExcelSetting.xlsx
-csvDownloadPath = D:\\Automation
+csvDownloadPath = C:\\snapshotsss
