--- a/xpath.properties
+++ b/xpath.properties
@@ -8,5 +8,5 @@ CLICK_COLUMNS = //span[contains(.,'Columns')]
 DATE_COLUMNS = (//*[@data-testid="search-filter-button"]/../../child::span)[2]
 DATE_UPDATE = //button[contains(.,'Update')]
 EXPORT = //span[text()='Export']
-SAVE_AS_CSV = //*[@value='csv']
+SAVE_AS_CSV = //*[@value='csv']/..
 EXPORT_BTN_CSV = //button[contains(@class,'Confirm')]
