--- a/xpath.properties
+++ b/xpath.properties
@@ -2,7 +2,7 @@ EMAIL = //input[@id='email']
 PASS = //input[@id='pass']
 LOGIN_BTN = //*[@id="loginbutton"]
 FB_USER_MENU = //div[@id='userNavigationLabel']
-MANAGE_ADVERTS = //ul[@role='menu']//li[contains(.,'Manage Adverts')]
+MANAGE_ADVERTS = //span[text()='Manage Adverts']
 MANAGE_ADVERT_ACC_Name = //a[contains(.,'#####')]
 CLICK_COLUMNS = //span[contains(.,'Columns')]
 DATE_COLUMNS = (//*[@data-testid="search-filter-button"]/../../child::span)[2]
@@ -10,3 +10,4 @@ DATE_UPDATE = //button[contains(.,'Update')]
 EXPORT = //span[text()='Export']
 SAVE_AS_CSV = //*[@value='csv']/..
 EXPORT_BTN_CSV = //button[contains(@class,'Confirm')]
+
