--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,5 @@
 URL = https://www.facebook.com/
 ExcelConfigFileName = ExcelSetting.xlsx
 csvDownloadPath = C:\\snapshotsss
-SchedulerCount =2
+SchedulerCount = 2
+WaitTime = 3
