--- a/xpath.properties
+++ b/xpath.properties
@@ -2,8 +2,8 @@ EMAIL = //input[@id='email']
 PASS = //input[@id='pass']
 LOGIN_BTN = //*[@id="loginbutton"]
 FB_USER_MENU = //div[@id='userNavigationLabel']
-MANAGE_ADVERTS = //span[text()='Manage Adverts']
-MANAGE_ADVERT_ACC_Name = //a[contains(.,'#####')]
+MANAGE_ADVERTS = //span[text()='Manage Adverts'] | //span[text()='Manage Ads']
+MANAGE_ADVERT_ACC_Name = //a[text()='#####']
 CLICK_COLUMNS = //span[contains(.,'Columns')]
 DATE_COLUMNS = (//*[@data-testid="search-filter-button"]/../../child::span)[2]
 DATE_UPDATE = //button[contains(.,'Update')]
